--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,19 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #808080;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 25px;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
