--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
+  background-color: #36454f;
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
   background-color: black;
   border-radius: 25px;
 }
